fix z-index

--- a/src/packages/admin-ui-components/src/table/styles.module.css
+++ b/src/packages/admin-ui-components/src/table/styles.module.css
@@ -26,7 +26,6 @@
 	height: 40px;
 	position: sticky;
 	top: 0;
-	z-index: 1;
 }
 
 .table th {
